# Ryme

./: .gitignore  CMakeLists.txt
CMake/: CompileShaderList.cmake  ConfigureFileList.cmake  Findpatch.cmake  GetRuntimeDir.cmake
Demos/: CMakeLists.txt
Demos/HelloWorld/: CMakeLists.txt
Demos/HelloWorld/Assets/: Test.frag.glsl  Test.py
Demos/HelloWorld/Assets/Shaders/: Test.vert.glsl
Demos/HelloWorld/Private/: Main.cpp
Engine/: CMakeLists.txt
Engine/Assets/Ryme/: ColorSpace.inc.glsl  Globals.inc.glsl  Material.inc.glsl  Math.inc.glsl  TBN.inc.glsl  VertexAttributes.inc.glsl
Engine/Assets/Shaders/Ryme/: Globals.inc.glsl  Transform.inc.glsl  VertexAttributes.inc.glsl
Engine/Private/: Buffer.cpp  Camera.cpp  Color.cpp  Component.cpp  Entity.cpp  Event.cpp  Graphics.cpp  Log.cpp  Math.Mat.cpp  Math.Quat.cpp  Math.Vec.hpp  Math.Vec2.cpp  Math.Vec3.cpp  Math.Vec4.cpp  Math.cpp  Mesh.GLTF2.cpp  Mesh.OBJ.cpp  Mesh.cpp  Model.GLTF2.cpp  Model.OBJ.cpp  Model.cpp  ModelComponent.cpp  Path.cpp  Pipeline.cpp  Primitive.cpp  RenderSystem.cpp  Ryme.cpp  Scene.cpp  Script.cpp  Shader.cpp  String.cpp  System.cpp  Texture.cpp  Transform.cpp  UTF.CaseFolding.h  UTF.CaseMapping.h  UTF.cpp  Version.cpp  Vertex.cpp  World.cpp
Engine/Public/: vk_mem_alloc.h
Engine/Public/Ryme/: Array.hpp  Asset.hpp  Buffer.hpp  Camera.hpp  Color.hpp  Component.hpp  Config.hpp.in  Containers.hpp  Entity.hpp  Event.hpp  Exception.hpp  Graphics.hpp  InitInfo.hpp  JSON.hpp  List.hpp  Log.hpp  Macros.hpp  Map.hpp  Math.hpp  Mesh.hpp  Model.hpp  ModelComponent.hpp  NonCopyable.hpp  Path.hpp  Pipeline.hpp  Platform.hpp  Primitive.hpp  Queue.hpp  RenderSystem.hpp  Ryme.hpp  Scene.hpp  Script.hpp  Set.hpp  Shader.hpp  ShaderGlobals.hpp  ShaderMaterial.hpp  ShaderTransform.hpp  Span.hpp  String.hpp  System.hpp  (+8 more)
Scripts/: generate-launch-targets.py
